--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
+    "dotenv-expand": "^5.1.0",
     "express": "^4.21.2",
     "lucide-react": "^0.475.0",
     "nodemailer": "^6.10.0",
